--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
 	<div class="row justify-content-center">
-		<h1 class="display-4">Welcome to Testee Land</h1>
+		<h1 class="display-4">Welcome to Testy Land</h1>
 	</div>
 	<div class="row justify-content-center">
 		<p class="lead">This is a simple unit test builder, in a few easy steps you can build the scaffolding for your unit test.</p>
